working on product resource
